media/jellyfin/jellyfin-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    kubernetes.io/metadata.name: jellyfin
    media-ns: authorized
