media/jellyfin/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.10.7
        ports:
          - containerPort: 8096
        volumeMounts:
          - name: jellyfin-config
            mountPath: /config
          - name: jellyfin-cache
            mountPath: /cache
          - name: jellyfin-tvshows
            mountPath: /tvshow
          - name: jellyfin-movies
            mountPath: /movie
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: jellyfin-tvshows
          persistentVolumeClaim:
            claimName: jellyfin-tvshows-pvc
        - name: jellyfin-movies
          persistentVolumeClaim:
            claimName: jellyfin-movies-pvc
