media/jellyfin/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.ltc.tsphotoclicks.net`)
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
